--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,16 +26,16 @@ jobs:
     - name: Copy build to Capacitor
       run: npx cap copy
 
-    - name: Setup Java
+    - name: Setup Java (Java 21)
       uses: actions/setup-java@v4
       with:
-        distribution: "temurin"
-        java-version: 17
+        distribution: 'temurin'
+        java-version: '21'
 
     - name: Build APK
       run: |
         cd android
-        ./gradlew assembleRelease
+        ./gradlew assembleRelease --no-daemon
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
